# concmd

./: Cargo.toml  LICENSE  example_config.toml  history.txt  output.txt  test.md
.github/workflows/: rust.yml
src/: actions.rs  alt_tui.rs  conf_api.rs  main.rs  tui.rs
