[package]
name = "concmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive"] }
expanduser = "1.2.2"
home = "0.5.9"
reqwest = {version = "0.12.5", features = ["blocking"]}
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
text_io = "0.1.12"
toml = "0.8.15"
pandoc = "0.8.11"
cursive = "0.21"
