[package]
name = "concmd"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive"] }
reqwest = {version = "0.12.5", features = ["blocking"]}
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
toml = "0.8.15"
pandoc = "0.8.11"
cursive = "0.21"
ratatui = "0.29.0"
crossterm = "0.29.0"
edit = "0.1.5"
dirs = "6.0.0"
lib_cfm = { path = "../lib_cfm/" }
markdown = "1.0.0"
htmd = "0.4.0"


[target.'cfg(target_family = "unix")'.dependencies]
expanduser = "1.2.2"
